--- a/ActivityTest16Browser/res/layout/activity_main.xml
+++ b/ActivityTest16Browser/res/layout/activity_main.xml
@@ -5,9 +5,16 @@
     android:layout_height="match_parent"
     >
     
+    <!-- 
 	<TextView  
 	    android:layout_width="match_parent" 
 	    android:layout_height="wrap_content" 
 	    android:id="@+id/textView"/>
+	 -->
+	 
+	 <WebView  
+    	android:id="@+id/webview"
+    	android:layout_width="fill_parent"
+    	android:layout_height="fill_parent" />
 	
 </LinearLayout> 
