--- a/ActivityTest18ImplicitIntent/res/layout/activity_main.xml
+++ b/ActivityTest18ImplicitIntent/res/layout/activity_main.xml
@@ -1,16 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="cn.nec.nlc.example.activitytest18.MainActivity" >
+    android:alignmentMode="alignBounds"
+    android:columnCount="1" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+      <Spinner
+        android:id="@+id/spinner"
+        android:layout_gravity="fill_horizontal"
+        android:drawSelectorOnTop="true"
+        >
+      </Spinner>
+    
+    <Button
+        android:id="@+id/trigger"
+        android:onClick="onClick"
+        android:text="Trigger Intent">
+    </Button>
 
-</RelativeLayout>
+  
+</GridLayout> 
