Fill the content of ActivityTest20ActionBarProg and revise README.md accordingly

--- a/ActivityTest20ActionBarProg/res/menu/main.xml
+++ b/ActivityTest20ActionBarProg/res/menu/main.xml
@@ -1,11 +1,17 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="cn.nec.nlc.example.activitytest20.MainActivity" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/menu_settings"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:showAsAction="always"
+        android:title="Settings"
+        />
 
-</menu>
+    <item
+        android:id="@+id/menu_load"
+        android:icon="@drawable/navigation_refresh"
+        android:orderInCategory="200"
+        android:showAsAction="always"
+        android:title="Load"/>
+
+</menu> 
