--- a/ActivityTest32Drawable/res/layout/activity_main.xml
+++ b/ActivityTest32Drawable/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/myshape"
     tools:context="cn.nec.nlc.example.activitytest32drawable.MainActivity" >
 
     <TextView
