--- a/WidgetTest01RandomNumber/res/xml/widget_info.xml
+++ b/WidgetTest01RandomNumber/res/xml/widget_info.xml
@@ -4,6 +4,7 @@
     android:initialLayout="@layout/widget_layout"
     android:minHeight="72dp"
     android:minWidth="300dp"
-    android:updatePeriodMillis="300000" >
+    android:updatePeriodMillis="300000" 
+    android:widgetCategory="keyguard|home_screen" > <!-- enabling widget for lock screen, can also being done in runtime -->
 
 </appwidget-provider> 
