--- a/ActivityTest48SendToOtherActivity/app/src/main/res/menu/menu_share.xml
+++ b/ActivityTest48SendToOtherActivity/app/src/main/res/menu/menu_share.xml
@@ -1,10 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
+        android:id="@+id/menu_item_share"
+        android:title="Share"
+        android:actionProviderClass="android.widget.ShareActionProvider"
         android:showAsAction="always" />
 </menu>
