--- a/ServiceTest05IntentService/app/src/main/res/layout/activity_main.xml
+++ b/ServiceTest05IntentService/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,17 @@
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textViewStatus" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="On"
         android:id="@+id/buttonServiceOn"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/textViewStatus"
         android:width="80dp"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="28dp" />
+        android:layout_marginTop="30dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -27,5 +27,12 @@
         android:width="80dp"
         android:layout_alignTop="@+id/buttonServiceOn"
         android:layout_toEndOf="@+id/buttonServiceOn" />
+
+    <cn.nec.nlc.example.jamesli.servicetest05intentservice.DirectionView
+        android:id="@+id/directionView"
+        android:layout_below="@+id/buttonServiceOn"
+        android:layout_marginTop="30dp"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </RelativeLayout>
