--- a/ActivityTest52Fragment/app/src/main/res/layout-land/fragment_layout.xml
+++ b/ActivityTest52Fragment/app/src/main/res/layout-land/fragment_layout.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -16,11 +17,23 @@
         android:layout_width="0px"
         android:layout_height="match_parent" />
 
+    <!--
+    <fragment class="cn.nec.nlc.example.jamesli.activitytest52fragment.DetailsFragment"
+        android:id="@+id/details"
+        android:layout_weight="1"
+        android:layout_width="0px"
+        android:layout_height="match_parent" />
+    -->
+
+    <!-- two fragments are equally weighted -->
     <FrameLayout
         android:id="@+id/details"
         android:layout_weight="1"
         android:layout_width="0px"
         android:layout_height="match_parent"
         android:background="?android:attr/detailsElementBackground" />
+    <!-- Background that can be used behind parts of a UI that provide details on data
+    the user is selecting. API Level 11 -->
+
 
 </LinearLayout>
