--- a/ServiceTest06SensorSampleRate/app/src/main/res/layout/activity_main.xml
+++ b/ServiceTest06SensorSampleRate/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,22 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
+    <!--
     <TextView
         android:id="@+id/textViewWelcome"
         android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+    -->
 
     <RadioGroup
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/radioGroupSensorType"
         android:orientation="vertical"
-        android:layout_below="@+id/textViewWelcome"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="10dp">
         <RadioButton android:id="@+id/radioButtonAcc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,9 +43,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/radioGroupSampleRate"
         android:orientation="vertical"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/radioGroupSensorType"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true" >
         <RadioButton android:id="@+id/radioButtonRateNormal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -75,7 +76,7 @@
         android:layout_below="@+id/radioGroupSampleRate"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:onClick="onCalculateButtonClicked" />
 
     <Button
@@ -86,6 +87,7 @@
         android:onClick="onCalculateButtonClicked"
         android:layout_alignBottom="@+id/buttonSensorOn"
         android:layout_toEndOf="@+id/buttonSensorOn"
+        android:layout_toRightOf="@+id/buttonSensorOn"
         android:enabled="false" />
 
     <TextView
@@ -93,7 +95,7 @@
         android:text="Status: sensor off"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/buttonSensorOn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -102,7 +104,7 @@
         android:id="@+id/textViewSamRate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/textViewStatus"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
