--- a/ActivityTest53Preference/app/src/main/res/xml/preferences1.xml
+++ b/ActivityTest53Preference/app/src/main/res/xml/preferences1.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- must specify a default value for each Preference object in your XML file using
+    the android:defaultValue attribute -->
     <CheckBoxPreference
         android:key="pref_sync"
         android:title="@string/pref_sync"
