--- a/ActivityTest61SensorList/app/src/main/res/layout/activity_main.xml
+++ b/ActivityTest61SensorList/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_below="@+id/button"
-        android:layout_alignParentStart="true" />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -21,5 +15,20 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:onClick="onShowSensorList"/>
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:id="@+id/scrollView"
+        android:layout_below="@+id/button"
+        android:layout_alignParentStart="true" >
+
+        <TextView
+            android:text="@string/hello_world"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView"
+            android:layout_alignParentStart="true" />
+    </ScrollView>
 
 </RelativeLayout>
