--- a/ActivityTest69UITest/app/src/main/res/values/layouts.xml
+++ b/ActivityTest69UITest/app/src/main/res/values/layouts.xml
@@ -16,6 +16,7 @@
 
 <!-- BEGIN_INCLUDE(all) -->
 <resources>
+    <!-- to avoid duplicate xml input, e.g. onepane_with_bar -->
     <item name="main_layout" type="layout">@layout/onepane_with_bar</item>
     <bool name="has_two_panes">false</bool>
 </resources>
