--- a/AT71MaterialDesign/app/src/main/res/layout/activity_main.xml
+++ b/AT71MaterialDesign/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:elevation="5dp"
+        android:background="@drawable/myrect" />
 
     <Button
         android:layout_width="wrap_content"
@@ -19,11 +23,21 @@
         android:layout_alignParentStart="true"
         android:onClick="onSomeButtonClicked" />
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonStartActivity"
+        android:layout_alignParentStart="true"
+        android:id="@+id/imageView" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/my_main_recycler_view"
-        android:layout_below="@id/buttonStartActivity"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/imageView"
+        android:layout_alignParentEnd="true" />
+
+
 
 </RelativeLayout>
