--- a/AT78PlayActionBar/app/src/main/res/menu/menu_main.xml
+++ b/AT78PlayActionBar/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_test1"
+        android:title="Test 1"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_test2"
+        android:title="Test 2"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_test3"
+        android:title="Test 3"
+        android:orderInCategory="100"
+        android:showAsAction="ifRoom" />
 </menu>
