--- a/AT84Network/app/src/main/res/layout/activity_network_socket.xml
+++ b/AT84Network/app/src/main/res/layout/activity_network_socket.xml
@@ -5,12 +5,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NetworkSocketActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:layout_below="@+id/buttonLoad"
-        android:layout_alignParentStart="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,5 +12,18 @@
         android:id="@+id/buttonLoad"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonLoad"
+        android:layout_alignParentStart="true" >
+        <TextView
+            android:text="@string/hello_world"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView" />
+    </ScrollView>
 
 </RelativeLayout>
