--- a/AT91HttpRequest/app/src/main/res/layout/activity_main.xml
+++ b/AT91HttpRequest/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,23 @@
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/buttonRequest"
         android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Request"
-        android:id="@+id/button"
+        android:id="@+id/buttonRequest"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post"
+        android:id="@+id/buttonPost"
+        android:layout_alignTop="@+id/buttonRequest"
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
