--- a/AT91HttpRequest/app/src/main/res/layout/activity_main.xml
+++ b/AT91HttpRequest/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+    <TextView
+        android:text="@string/hello_world"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView"
         android:layout_below="@+id/buttonRequest"
         android:layout_alignParentStart="true" />
+    <!-- android:freezesText="true" to fix the text when rotating the screen -->
 
     <Button
         android:layout_width="wrap_content"
@@ -24,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="Post"
         android:id="@+id/buttonPost"
-        android:layout_alignTop="@+id/buttonRequest"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/buttonRequest" />
 
 </RelativeLayout>
