Revise AT93RoboGuiceTest to make it work and work around the CustomView InjectionView issue by findViewById()

--- a/AT93RoboGuiceTest/app/src/main/res/layout/astroboy_activity_main.xml
+++ b/AT93RoboGuiceTest/app/src/main/res/layout/astroboy_activity_main.xml
@@ -48,7 +48,7 @@
         android:layout_gravity="center"
         android:text="Self Destruct"/>
 
-    <org.roboguice.astroboy.view.CustomView
+    <cn.jamesli.example.at93roboguicetest.view.CustomView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"/>"
 
