--- a/AT97SwipeRefreshLayout/app/src/main/res/layout/fragment_sample.xml
+++ b/AT97SwipeRefreshLayout/app/src/main/res/layout/fragment_sample.xml
@@ -1,12 +1,49 @@
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/tools"
     android:id="@+id/swiperefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@android:id/list"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <com.shamanland.fab.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|bottom"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="20dp"
+            android:clickable="true"
+            android:elevation="4dp"
+            app:floatingActionButtonColor="@color/fab_background"
+            android:src="@drawable/ic_refresh_white_24dp"
+            />
+
+        <!-- android:src="?attr/icActionRefresh" -->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginRight="16dp"-->
+
+        <!--<com.melnykov.fab.FloatingActionButton-->
+            <!--android:id="@+id/fab"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="bottom|right"-->
+            <!--android:layout_margin="16dp"-->
+            <!--android:src="@drawable/ic_refresh_white_24dp"-->
+            <!--fab:fab_colorNormal="@color/primary"-->
+            <!--fab:fab_colorPressed="@color/primary_dark"-->
+            <!--fab:fab_colorRipple="@color/ripple" />-->
+    </FrameLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
