--- a/AT99SwipeRefreshWithGridView/app/src/main/res/values/colors.xml
+++ b/AT99SwipeRefreshWithGridView/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="swipe_color_3">#8ABD00</color>
     <color name="swipe_color_4">#7CAF00</color>
 
+    <color name="fab_background">#e91e63</color>
+
 </resources>
