--- a/BT02BLELibrary/app/src/main/res/menu/menu_device_details.xml
+++ b/BT02BLELibrary/app/src/main/res/menu/menu_device_details.xml
@@ -2,11 +2,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+    <!--<item-->
+        <!--android:id="@+id/menu_connect"-->
+        <!--android:orderInCategory="100"-->
+        <!--android:title="@string/menu_connect"-->
+        <!--app:showAsAction="ifRoom|withText"/>-->
+
     <item
-        android:id="@+id/menu_connect"
-        android:orderInCategory="100"
-        android:title="@string/menu_connect"
-        app:showAsAction="always|withText"/>
+        android:id="@+id/menu_find"
+        android:orderInCategory="101"
+        android:title="@string/menu_find"
+        app:showAsAction="ifRoom|withText"/>
 
 
 </menu>
