BT06iBeaconTx: add two buttons to start and stop AltBeacon Tx

--- a/BT08iBeaconRx/app/src/main/res/layout/activity_main.xml
+++ b/BT08iBeaconRx/app/src/main/res/layout/activity_main.xml
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
-        android:id="@+id/button2"
+        android:id="@+id/button_start"
         android:layout_below="@+id/edC"
         android:layout_toEndOf="@+id/button"
         android:onClick="buttonStart" />
@@ -120,9 +120,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
-        android:id="@+id/button3"
+        android:id="@+id/button_stop"
         android:layout_below="@+id/edC"
-        android:layout_toEndOf="@+id/button2"
+        android:layout_toEndOf="@+id/button_start"
         android:onClick="buttonStop" />
 
 </RelativeLayout>
