--- a/BT06iBeaconTx/app/src/main/res/layout/activity_main.xml
+++ b/BT06iBeaconTx/app/src/main/res/layout/activity_main.xml
@@ -11,4 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:id="@+id/button_start"
+        android:layout_below="@+id/text_view_status"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Stop"
+        android:id="@+id/button_stop"
+        android:layout_alignTop="@+id/button_start"
+        android:layout_toEndOf="@+id/button_start" />
+
 </RelativeLayout>
