--- a/BT08iBeaconRx/app/src/main/res/layout/activity_main.xml
+++ b/BT08iBeaconRx/app/src/main/res/layout/activity_main.xml
@@ -93,19 +93,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Update"
-        android:id="@+id/button"
+        android:id="@+id/button_update"
         android:layout_below="@+id/edC"
         android:layout_alignParentStart="true"
         android:enabled="false"
         android:onClick="btUpdatecoefficient" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Status"
-        android:id="@+id/tvStatus"
-        android:layout_below="@+id/button"
-        android:layout_alignParentStart="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -113,7 +105,7 @@
         android:text="Start"
         android:id="@+id/button_start"
         android:layout_below="@+id/edC"
-        android:layout_toEndOf="@+id/button"
+        android:layout_toEndOf="@+id/button_update"
         android:onClick="buttonStart" />
 
     <Button
@@ -124,5 +116,22 @@
         android:layout_below="@+id/edC"
         android:layout_toEndOf="@+id/button_start"
         android:onClick="buttonStop" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView"
+        android:layout_below="@+id/button_update"
+        android:layout_alignParentStart="true" >
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Status"
+            android:id="@+id/tvStatus"
+            android:layout_below="@+id/button_update"
+            android:layout_alignParentStart="true" />
+
+    </ScrollView>
 
 </RelativeLayout>
