--- a/BT10iBeaconTxRx/app/src/main/res/layout/fragment_rx.xml
+++ b/BT10iBeaconTxRx/app/src/main/res/layout/fragment_rx.xml
@@ -8,12 +8,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".RxActivity">
+    tools:context="cn.jamesli.example.bt10ibeacontxrx.fragment.RxFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Settings:"
+        android:text="Rx Settings:"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin" />
 
@@ -31,7 +31,7 @@
             android:text="Sample rate"/>
 
         <cn.jamesli.example.bt10ibeacontxrx.nicespinner.NiceSpinner
-            android:id="@+id/spinnerSampleRate"
+            android:id="@+id/spinner_rx_sample_rate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2" />
@@ -52,7 +52,7 @@
             android:text="Averaging"/>
 
         <cn.jamesli.example.bt10ibeacontxrx.nicespinner.NiceSpinner
-            android:id="@+id/spinnerAveraging"
+            android:id="@+id/spinner_rx_averaging"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2" />
@@ -73,7 +73,7 @@
             android:text="No. of samples"/>
 
         <cn.jamesli.example.bt10ibeacontxrx.nicespinner.NiceSpinner
-            android:id="@+id/spinnerNumberOfSamples"
+            android:id="@+id/spinner_rx_number_of_samples"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2" />
@@ -88,19 +88,19 @@
         android:paddingBottom="@dimen/activity_vertical_margin" >
 
         <Button
-            android:id="@+id/button_start"
+            android:id="@+id/button_rx_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Start" />
 
         <Button
-            android:id="@+id/button_stop"
+            android:id="@+id/button_rx_stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Stop" />
 
         <Button
-            android:id="@+id/button_save"
+            android:id="@+id/button_rx_save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Save" />
@@ -114,7 +114,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin" >
 
         <TextView
-            android:id="@+id/text_view_status"
+            android:id="@+id/text_view_rx_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Status: "/>
